--- a/à.html
+++ b/à.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <h1>Công ty phát triển game fish mixi sigma skidibi mewing</h1>
-    <p>Xin cảm ơn, bạn đã bị lừa đảo bên campuchia. Bạn ngu như con cặc.</p>
+    <p>Xin cảm ơn, bạn đã bị bán sang campuchia. Bạn ngu như con cặc. Khôn hồn mà làm việc chăm chỉ vào, không là chích điện hoặc tao tát cho một phát là đi vào viện răng hàm mà khoa chấn thương chỉnh hình răng môi mày lẫn lộn trộn vào với nhau</p>
 </body>
 </html>
