--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Công ty phát triển game fish mixi sigma skidibi mewing</title>
-</head>
-<body>
-    <h1>Công ty phát triển game fish mixi sigma skidibi mewing web!</h1>
-    <p>Xin cám ơn, bạn đã bị lừa bán sang campuchia. Bạn ngu như con cặc.</p>
-</body>
-</html>
+git add index.html
+git commit -m "Add index.html"
+git push origin main
