--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-git add index.html
-git commit -m "Add index.html"
-git push origin main
+Công ty phát triển game fish mixi sigma skidibi mewing
+Xin cảm ơn, bạn đã bị lừa bán sang campuchia. Bạn ngu như con cặc.
